# TownTask

./: .gitignore  ASSETS_GUIDE.md  CAT_PROCESSING_GUIDE.md  CMakeLists.txt  Makefile  QUICK_START_ASSETS.md  README.md  WINDOWS_SETUP.md  build.bat  build.sh  build_optimized.sh  build_windows.bat  package.sh  process_cat.py  run.bat  run.sh  setup.fish  setup.sh  simple_tasktown  test_windows.bat
.kiro/specs/tasktown-core/: design.md  requirements.md  tasks.md
assets/: README.md
assets/config/: character_config.json  map_config.json
assets/fonts/: .gitkeep
assets/sounds/: .gitkeep  README.md
assets/sprites/: .gitkeep
assets/ui/: .gitkeep
data/: library.json  todolist.json
include/Core/: Components.h  Constants.h  EntityView.h  Types.h  World.h
include/Data/: DataManager.h
include/Game/: Game.h  GameState.h  SceneManager.h
include/Resources/: TextureManager.h
include/Systems/: AnimationSystem.h  CollisionSystem.h  FaceDetectionSystem.h  GUISystem.h  InteractionSystem.h  LibraryUISystem.h  MovementSystem.h  RenderSystem.h  TodoUISystem.h
src/: Components.h  GameState.h  SceneManager.h  Systems.h  World.h  main.cpp  raygui_impl.cpp
src/Core/: World.cpp
src/Data/: DataManager.cpp
src/Game/: Game.cpp  GameState.cpp  SceneManager.cpp
src/Resources/: TextureManager.cpp
src/Systems/: AnimationSystem.cpp  CollisionSystem.cpp  FaceDetectionSystem.cpp  GUISystem.cpp  InteractionSystem.cpp  LibraryUISystem.cpp  MovementSystem.cpp  RenderSystem.cpp  TodoUISystem.cpp
src/assets/: asset_manager.cpp  asset_manager.h
src/audio/: audio_manager.h
src/core/: application_state.cpp.backup  application_state.h.backup  integrated_application.cpp.backup  integrated_application.h.backup  simple_integrated_app.cpp  simple_integrated_app.h
src/core/engines/: habit_tracker.cpp  habit_tracker.h  note_engine.cpp  note_engine.h  note_system.cpp  note_system.h  pomodoro_timer.cpp  pomodoro_timer.h  task_engine.cpp  task_engine.h
src/core/models/: habit.h  note.cpp  task.cpp  town_state.h
src/core/performance/: performance_monitor.cpp  performance_monitor.h
src/core/systems/: building_upgrade_system.h  movement_system.h
src/input/: input_manager.h
src/persistence/: json_serializer.h
src/ui/animations/: sprite_animator.h
src/ui/feedback/: notification_system.cpp  notification_system.h
src/ui/screens/: bulletin_board_screen.h  coffee_shop_screen.h  gym_screen.h  library_screen.h
src/ui/widgets/: desktop_mode_widget.h
temp_backup/audio/: audio_integration.h  audio_manager.cpp
temp_backup/core/engines/: gamification_engine.cpp  gamification_engine.h
temp_backup/core/models/: character.cpp  character.h  habit.cpp  note.h  task.h  town_state.cpp
temp_backup/core/systems/: building_upgrade_system.h  movement_system.cpp
temp_backup/input/: input_manager.cpp  key_bindings.cpp
temp_backup/persistence/: json_serializer.cpp  save_manager.cpp  save_manager.h
temp_backup/ui/renderers/: building_renderer.cpp
temp_backup/ui/screens/: bulletin_board_screen.cpp  bulletin_board_screen.h  coffee_shop_screen.h  screen.h  screen_manager.cpp
temp_backup/ui/widgets/: desktop_mode_widget.cpp
temp_backup/ui/window/: desktop_overlay_integration.h  window_manager.h
temp_problematic/audio/: audio_integration.cpp  audio_manager.h
temp_problematic/input/: input_manager.h  key_bindings.h
temp_problematic/persistence/: json_serializer.h
temp_problematic/systems/: building_upgrade_system.cpp  movement_system.h
temp_problematic/ui/animations/: animation_manager.cpp  animation_manager.h  sprite_animator.cpp  sprite_animator.h
temp_problematic/ui/renderers/: building_renderer.h
temp_problematic/ui/screens/: .gitkeep  coffee_shop_screen.cpp  gym_screen.cpp  gym_screen.h  library_screen.cpp  library_screen.h  screen_manager.h  settings_screen.cpp  settings_screen.h  town_screen.cpp  town_screen.h
temp_problematic/ui/widgets/: desktop_mode_widget.h
temp_problematic/ui/window/: desktop_overlay_example.cpp  desktop_overlay_integration.cpp  window_manager.cpp
tests/: .gitkeep  simple_movement_test.cpp  simple_note_engine_test  simple_note_engine_test.cpp  test_animation_system  test_animation_system.cpp  test_audio_manager.cpp  test_building_upgrade_system.cpp  test_bulletin_board_screen.cpp  test_character.cpp  test_coffee_shop_screen.cpp  test_desktop_mode_widget.cpp  test_gamification_engine  test_gamification_engine.cpp  test_gym_screen.cpp  test_habit.cpp  test_habit_tracker.cpp  test_input_system  test_input_system.cpp  test_json_serializer.cpp  test_library_screen.cpp  test_movement_system.cpp  test_note.cpp  test_note_engine.cpp  test_note_system.cpp  test_pomodoro_timer.cpp  test_save_manager.cpp  test_settings_screen.cpp  test_task.cpp  test_task_engine.cpp  test_town_screen  test_town_screen.cpp  test_window_manager.cpp
tools/: image_processor.py
